force-app/main/default/objects/BillingDoc__c/BillingDoc__c.object-meta.xml
<CustomObject>
    <description>SAP Billing Doument - managed by smartInteract.
Holds Header level Billing Document information.</description>
    <label>Billing Doc</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>BillingDoc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Docs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>