force-app/main/default/objects/BillingDoc__c/fields/BillToAccountId__c.field-meta.xml
<CustomField>
    <fullName>BillToAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BillTo Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Docs (BillTo)</relationshipLabel>
    <relationshipName>BillingDocsBillTo</relationshipName>
    <type>Lookup</type>
</CustomField>