force-app/main/default/objects/BillingDoc__c/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <formula>GrossAmount__c  -  NetAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>