force-app/main/default/objects/BillingDoc__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>