force-app/main/default/objects/BillingDoc__c/fields/FacturaDate__c.field-meta.xml
<CustomField>
    <fullName>FacturaDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Factura Date</label>
    <type>Date</type>
</CustomField>