force-app/main/default/objects/BillingDoc__c/fields/GrossAmount__c.field-meta.xml
<CustomField>
    <fullName>GrossAmount__c</fullName>
    <label>Gross Amount</label>
    <summarizedField>BillingItem__c.GrossAmount__c</summarizedField>
    <summaryForeignKey>BillingItem__c.BillingDocId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>