force-app/main/default/objects/BillingDoc__c/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Terms</label>
    <length>50</length>
    <type>Text</type>
</CustomField>