force-app/main/default/objects/BillingDoc__c/fields/SalesAreaId__c.field-meta.xml
<CustomField>
    <fullName>SalesAreaId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Area</label>
    <referenceTo>SalesArea__c</referenceTo>
    <relationshipLabel>Billing Docs</relationshipLabel>
    <relationshipName>BillingDocs</relationshipName>
    <type>Lookup</type>
</CustomField>