force-app/main/default/objects/BillingDoc__c/fields/SoldToAccountId__c.field-meta.xml
<CustomField>
    <fullName>SoldToAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SoldTo Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Docs (SoldTo)</relationshipLabel>
    <relationshipName>BillingDocsSoldTo</relationshipName>
    <type>Lookup</type>
</CustomField>