force-app/main/default/objects/BillingDoc__c/fields/VatAmount__c.field-meta.xml
<CustomField>
    <fullName>VatAmount__c</fullName>
    <label>Vat Amount</label>
    <summarizedField>BillingItem__c.VatAmount__c</summarizedField>
    <summaryForeignKey>BillingItem__c.BillingDocId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>