force-app/main/default/objects/BillingDoc__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SoldToAccountId__c</columns>
    <columns>SalesAreaId__c</columns>
    <columns>DocumentType__c</columns>
    <columns>FacturaDate__c</columns>
    <columns>DueDate__c</columns>
    <columns>NetAmount__c</columns>
    <columns>VatAmount__c</columns>
    <columns>SapId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>